<resources>
    <string name="app_name">Authenticator</string>
    <string name="john_doe">John Doe</string>
    <string name="password_hint">*********</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_account">New Account</string>
    <string name="login_button">Login button</string>
    <string name="register">Register</string>
    <string name="create_a_new_account_for_free">Create a new account for free</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulations">Congratulations</string>
    <string name="logged_in">%1$s, you\'re now logged in!</string>
    <string name="john_doe_email">john@doe.com</string>
    <string name="e_mail">E-mail</string>
    <string name="congratulation_emoji">🥳</string>
</resources>