<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".CongratulationsFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulation_emoji"
        android:textSize="32sp"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/text_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/loggedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in"
        android:textColor="@color/text_secondary"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log out"
        android:backgroundTint="@color/purple_500"
        android:textStyle="bold"
        android:layout_marginTop="32dp"/>
</LinearLayout>